--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <input type="checkbox" id="toggle-clock" checked>
                 </div>
                 <p class="author">作者：F暗星</p>
+                <p class="version">版本号：3.0</p>
             </section>
         </main>
     </div>
