--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                 <div class="bookmarks-grid">
                     <a href="https://www.google.com" class="bookmark-item">谷歌</a>
                     <a href="https://www.github.com" class="bookmark-item">GitHub</a>
-                    <a href="https://www.v2ex.com" class="bookmark-item">V2EX</a>
+                    <a href="https://www.zhihu.com" class="bookmark-item">知乎</a>
+                    <a href="https://www.bilibili.com" class="bookmark-item">B站</a>
+                    <a href="https://mail.qq.com" class="bookmark-item">QQ邮箱</a>
+                    <a href="https://fanyi.baidu.com" class="bookmark-item">百度翻译</a>
                 </div>
             </section>
             <section id="settings-section" class="page hidden">
@@ -38,8 +41,16 @@
                     <label for="toggle-clock">显示时钟</label>
                     <input type="checkbox" id="toggle-clock" checked>
                 </div>
+                <div class="setting-item">
+                    <label for="search-engine-select">搜索引擎</label>
+                    <select id="search-engine-select">
+                        <option value="https://www.bing.com/search">必应</option>
+                        <option value="https://www.google.com/search">谷歌</option>
+                        <option value="https://www.baidu.com/s">百度</option>
+                    </select>
+                </div>
                 <p class="author">作者：F暗星</p>
-                <p class="version">版本号：3.0</p>
+                <p class="version">版本号：4.0</p>
             </section>
         </main>
     </div>
